tdf#107457 don't quote columns referred by expression (not by name)

Change-Id: I4894313ec27d716e9899c885ddc6be38a2447689
Reviewed-on: https://gerrit.libreoffice.org/37078
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit b78cabc850e0a71873714c892c46c9edb25fd364)